src/main/java/com/example/smarthome/error/code/ErrorCode.java
package com.example.smarthome.error.code;

public interface ErrorCode {
    int getErrorCode();
    String getDescription();
}
